refactor: update Angular version to 20.0.x
- Removed unused CommonModule imports from preferences-modal and quick-add-remote components.
- Cleaned up HTML templates in quick-add-remote component to use Angular's structural directives for better readability.
- Refactored error handling in quick-add-remote and remote-config-step components to use Angular's template syntax.
- Enhanced loading states and button interactions in remote-config-modal and flag-config-step components.
- Improved overall code structure and readability by applying consistent formatting and removing unnecessary elements.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!-- Custom Right-Click Menu -->
 <!-- <div id="custom-menu" class="menu" (mouseleave)="hideMenu()">
-    <ul>
-      <li (click)="onOptionClick('Option 1')">Option 1</li>
-      <li (click)="onOptionClick('Option 2')">Option 2</li>
-      <li (click)="onOptionClick('Option 3')">Option 3</li>
-    </ul>
-  </div> -->
+<ul>
+  <li (click)="onOptionClick('Option 1')">Option 1</li>
+  <li (click)="onOptionClick('Option 2')">Option 2</li>
+  <li (click)="onOptionClick('Option 3')">Option 3</li>
+</ul>
+</div> -->
 
 <!-- Main Layout -->
 <div class="app-wrapper">
@@ -14,12 +14,14 @@
   <mat-toolbar [@slideToggle]="isMeteredConnection ? 'visible' : 'hidden'" class="metered-banner" role="alert">
     You are on a metered connection. Some features may use extra data.
   </mat-toolbar>
-  <app-onboarding *ngIf="!completedOnboarding" class="onboarding" (completed)="finishOnboarding()">
-  </app-onboarding>
+  @if (!completedOnboarding) {
+    <app-onboarding class="onboarding" (completed)="finishOnboarding()">
+    </app-onboarding>
+  }
   <app-home appRightClick></app-home> <!-- Enable Right-Click on Home -->
-  <ng-container *ngIf="isMobile$ | async">
+  @if (isMobile$ | async) {
     <div class="mobile-tab-bar">
       <app-tabs-buttons></app-tabs-buttons>
     </div>
-  </ng-container>
+  }
 </div>
