--- a/src/app/components/onboarding/onboarding.component.html
+++ b/src/app/components/onboarding/onboarding.component.html
@@ -1,64 +1,77 @@
 <div class="onboarding-container" data-tauri-drag-region>
   <div class="card-container">
-    <mat-card class="card" *ngFor="let card of cards; let i = index; trackBy: trackByIndex"
-      [@slideAnimation]="i === currentCardIndex ? animationState : 'void'"
-      [ngClass]="{ active: i === currentCardIndex }">
-
-      <img mat-card-avatar [src]="card.image" alt="Card icon" />
-
-      <mat-card-title>{{ card.title }}</mat-card-title>
-      <mat-card-subtitle>{{ card.content }}</mat-card-subtitle>
-
-      <div *ngIf="i === currentCardIndex">
-
-        <mat-radio-group [disabled]="installing" [(ngModel)]="installLocation"
-          *ngIf="card.title === 'Install RClone' && !rcloneInstalled">
-          <mat-radio-button value="default" class="radio-button">
-            Predefined Location (Recommended)
-          </mat-radio-button>
-          <mat-radio-button value="custom" class="radio-button">
-            Choose Custom Path
-          </mat-radio-button>
-        </mat-radio-group>
-
-        <mat-form-field *ngIf="installLocation === 'custom' && card.title === 'Install RClone' && !rcloneInstalled"
-          class="input-field" @slideInOut>
-          <mat-label>Rclone Installation Path</mat-label>
-          <input matInput [(ngModel)]="customPath" placeholder="Select a folder..." readonly />
-          <button matSuffix type="button" (click)="selectCustomPath()">
-            <mat-icon svgIcon="folder"></mat-icon>
-          </button>
-        </mat-form-field>
-      </div>
-    </mat-card>
+    @for (card of cards; track i; let i = $index) {
+      <mat-card class="card"
+        [@slideAnimation]="i === currentCardIndex ? animationState : 'void'"
+        [ngClass]="{ active: i === currentCardIndex }">
+        <img mat-card-avatar [src]="card.image" alt="Card icon" />
+        <mat-card-title>{{ card.title }}</mat-card-title>
+        <mat-card-subtitle>{{ card.content }}</mat-card-subtitle>
+        @if (i === currentCardIndex) {
+          <div>
+            @if (card.title === 'Install RClone' && !rcloneInstalled) {
+              <mat-radio-group [disabled]="installing" [(ngModel)]="installLocation"
+                >
+                <mat-radio-button value="default" class="radio-button">
+                  Predefined Location (Recommended)
+                </mat-radio-button>
+                <mat-radio-button value="custom" class="radio-button">
+                  Choose Custom Path
+                </mat-radio-button>
+              </mat-radio-group>
+            }
+            @if (installLocation === 'custom' && card.title === 'Install RClone' && !rcloneInstalled) {
+              <mat-form-field
+                class="input-field" @slideInOut>
+                <mat-label>Rclone Installation Path</mat-label>
+                <input matInput [(ngModel)]="customPath" placeholder="Select a folder..." readonly />
+                <button matSuffix type="button" (click)="selectCustomPath()">
+                  <mat-icon svgIcon="folder"></mat-icon>
+                </button>
+              </mat-form-field>
+            }
+          </div>
+        }
+      </mat-card>
+    }
 
 
     <div class="navigation">
-      <button mat-icon-button color="accent" *ngIf="currentCardIndex > 0" (click)="previousCard()" aria-label="Previous">
-        <mat-icon svgIcon="left-arrow"></mat-icon>
-      </button>
+      @if (currentCardIndex > 0) {
+        <button mat-icon-button color="accent" (click)="previousCard()" aria-label="Previous">
+          <mat-icon svgIcon="left-arrow"></mat-icon>
+        </button>
+      }
 
-      <button mat-icon-button color="accent" *ngIf="currentCardIndex < cards.length - 1 && !shouldShowActionButton()" (click)="nextCard()"
-        aria-label="Next">
-        <mat-icon svgIcon="right-arrow"></mat-icon>
-      </button>
+      @if (currentCardIndex < cards.length - 1 && !shouldShowActionButton()) {
+        <button mat-icon-button color="accent" (click)="nextCard()"
+          aria-label="Next">
+          <mat-icon svgIcon="right-arrow"></mat-icon>
+        </button>
+      }
 
-      <button mat-raised-button color="accent" *ngIf="shouldShowInstallRcloneButton()" (click)="installRclone()" [disabled]="installing"
-        aria-label="Install Rclone">
-        <mat-icon svgIcon="download"></mat-icon>
-        {{ installing ? 'Installing...' : 'Install Rclone' }}
-      </button>
+      @if (shouldShowInstallRcloneButton()) {
+        <button mat-raised-button color="accent" (click)="installRclone()" [disabled]="installing"
+          aria-label="Install Rclone">
+          <mat-icon svgIcon="download"></mat-icon>
+          {{ installing ? 'Installing...' : 'Install Rclone' }}
+        </button>
+      }
 
-      <button mat-raised-button color="accent" *ngIf="shouldShowInstallPluginButton()" (click)="installMountPlugin()" [disabled]="downloadingPlugin"
-        aria-label="Install Plugin">
-        <mat-icon svgIcon="download"></mat-icon>
-        {{ downloadingPlugin ? 'Downloading...' : 'Install Plugin' }}
-      </button>
+      @if (shouldShowInstallPluginButton()) {
+        <button mat-raised-button color="accent" (click)="installMountPlugin()" [disabled]="downloadingPlugin"
+          aria-label="Install Plugin">
+          <mat-icon svgIcon="download"></mat-icon>
+          {{ downloadingPlugin ? 'Downloading...' : 'Install Plugin' }}
+        </button>
+      }
 
-      <button mat-icon-button color="primary" *ngIf="cards[currentCardIndex].title === 'Setup Complete'" (click)="completeOnboarding()"
-        aria-label="Finish">
-        <mat-icon svgIcon="circle-check"></mat-icon>
-      </button>
+      @if (cards[currentCardIndex].title === 'Setup Complete') {
+        <button mat-icon-button color="primary" (click)="completeOnboarding()"
+          aria-label="Finish">
+          <mat-icon svgIcon="circle-check"></mat-icon>
+        </button>
+      }
     </div>
   </div>
 </div>
