--- a/src/app/modals/input-modal/input-modal.component.html
+++ b/src/app/modals/input-modal/input-modal.component.html
@@ -12,45 +12,51 @@
 
   <div mat-dialog-content class="modal-content">
     <p>{{ data.description }}</p>
-    <ng-container *ngFor="let field of data.fields">
-      <ng-container [ngSwitch]="field.type">
-
+    @for (field of data.fields; track field) {
+      @switch (field.type) {
         <!-- Regular input types -->
-        <mat-form-field *ngSwitchCase="'text'" appearance="fill" style="width: 100%;">
-          <mat-label>{{ field.label }}</mat-label>
-          <input matInput [(ngModel)]="formData[field.name]" [required]="field.required" />
-        </mat-form-field>
-
-        <mat-form-field *ngSwitchCase="'password'" appearance="fill" style="width: 100%;">
-          <mat-label>{{ field.label }}</mat-label>
-          <input matInput [(ngModel)]="formData[field.name]" type="password" [required]="field.required" />
-        </mat-form-field>
-
-        <mat-form-field *ngSwitchCase="'number'" appearance="fill" style="width: 100%;">
-          <mat-label>{{ field.label }}</mat-label>
-          <input matInput type="number" [(ngModel)]="formData[field.name]" [required]="field.required" />
-        </mat-form-field>
-
-        <mat-form-field *ngSwitchCase="'select'" appearance="fill" style="width: 100%;">
-          <mat-label>{{ field.label }}</mat-label>
-          <mat-select [(ngModel)]="formData[field.name]" [required]="field.required">
-            <mat-option *ngFor="let option of field.options" [value]="option">
-              {{ option }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-
+        @case ('text') {
+          <mat-form-field appearance="fill" style="width: 100%;">
+            <mat-label>{{ field.label }}</mat-label>
+            <input matInput [(ngModel)]="formData[field.name]" [required]="field.required" />
+          </mat-form-field>
+        }
+        @case ('password') {
+          <mat-form-field appearance="fill" style="width: 100%;">
+            <mat-label>{{ field.label }}</mat-label>
+            <input matInput [(ngModel)]="formData[field.name]" type="password" [required]="field.required" />
+          </mat-form-field>
+        }
+        @case ('number') {
+          <mat-form-field appearance="fill" style="width: 100%;">
+            <mat-label>{{ field.label }}</mat-label>
+            <input matInput type="number" [(ngModel)]="formData[field.name]" [required]="field.required" />
+          </mat-form-field>
+        }
+        @case ('select') {
+          <mat-form-field appearance="fill" style="width: 100%;">
+            <mat-label>{{ field.label }}</mat-label>
+            <mat-select [(ngModel)]="formData[field.name]" [required]="field.required">
+              @for (option of field.options; track option) {
+                <mat-option [value]="option">
+                  {{ option }}
+                </mat-option>
+              }
+            </mat-select>
+          </mat-form-field>
+        }
         <!-- Folder select input -->
-        <mat-form-field *ngSwitchCase="'folder'" appearance="fill" style="width: 100%;">
-          <mat-label>{{ field.label }}</mat-label>
-          <input matInput [value]="formData[field.name]" placeholder="Select a folder..." readonly />
-          <button mat-icon-button matSuffix type="button" (click)="selectFolder()">
-            <mat-icon svgIcon="folder"></mat-icon>
-          </button>
-        </mat-form-field>
-
-      </ng-container>
-    </ng-container>
+        @case ('folder') {
+          <mat-form-field appearance="fill" style="width: 100%;">
+            <mat-label>{{ field.label }}</mat-label>
+            <input matInput [value]="formData[field.name]" placeholder="Select a folder..." readonly />
+            <button mat-icon-button matSuffix type="button" (click)="selectFolder()">
+              <mat-icon svgIcon="folder"></mat-icon>
+            </button>
+          </mat-form-field>
+        }
+      }
+    }
     <div mat-dialog-actions align="center">
       <button mat-raised-button color="primary" (click)="confirm()" [disabled]="!isFormValid()">
         <mat-icon svgIcon="circle-check"></mat-icon>
