--- a/src/app/modals/about-modal/about-modal.component.html
+++ b/src/app/modals/about-modal/about-modal.component.html
@@ -1,148 +1,159 @@
 <div class="about-modal">
-    <div class="modal-header" data-tauri-drag-region [class.scrolled]="scrolled">
-        <button disabled mat-icon-button>
-            <mat-icon></mat-icon>
+  <div class="modal-header" data-tauri-drag-region [class.scrolled]="scrolled">
+    <button disabled mat-icon-button>
+      <mat-icon></mat-icon>
+    </button>
+    <p>About</p>
+    <button class="close-btn" mat-icon-button aria-label="Close" (click)="close()">
+      <mat-icon svgIcon="circle-xmark"></mat-icon>
+    </button>
+  </div>
+  <!-- Main About Page -->
+  <div class="modal-content" #content (scroll)="onScroll(content)">
+    <mat-icon svgIcon="rclone" class="app-icon"></mat-icon>
+    <h2 class="app-name">RClone Manager</h2>
+    <p class="app-team">Hakan İSMAİL</p>
+    <span class="version-badge" (click)="copyToClipboard(rCloneManagerVersion)">
+      {{ rCloneManagerVersion }}
+    </span>
+
+    <!-- Navigation List -->
+    <div class="about-list">
+      <button mat-button class="about-item" (click)="navigateTo('details')">
+        <span>Details</span>
+        <mat-icon svgIcon="chevron-right"></mat-icon>
+      </button>
+      <button mat-button class="about-item" (click)="navigateTo('About Rclone')">
+        <span>About Rclone</span>
+        <mat-icon svgIcon="chevron-right"></mat-icon>
+      </button>
+      <div class="stacked-buttons">
+        <button mat-button class="about-item" (click)="navigateTo('credits')"
+          style="border-radius: 16px 16px 0px 0px !important;">
+          <span>Credits</span> <mat-icon svgIcon="chevron-right"></mat-icon>
         </button>
-        <p>About</p>
-        <button class="close-btn" mat-icon-button aria-label="Close" (click)="close()">
-            <mat-icon svgIcon="circle-xmark"></mat-icon>
+        <mat-divider></mat-divider>
+        <button mat-button class="about-item" (click)="navigateTo('legal')"
+          style="border-radius: 0px 0px 16px 16px !important;">
+          <span>Legal</span> <mat-icon svgIcon="chevron-right"></mat-icon>
         </button>
+      </div>
     </div>
-    <!-- Main About Page -->
-    <div class="modal-content" #content (scroll)="onScroll(content)">
-        <mat-icon svgIcon="rclone" class="app-icon"></mat-icon>
-        <h2 class="app-name">RClone Manager</h2>
-        <p class="app-team">Hakan İSMAİL</p>
-        <span class="version-badge" (click)="copyToClipboard(rCloneManagerVersion)">
-            {{ rCloneManagerVersion }}
-        </span>
+  </div>
 
-        <!-- Navigation List -->
-        <div class="about-list">
-            <button mat-button class="about-item" (click)="navigateTo('details')">
-                <span>Details</span>
-                <mat-icon svgIcon="chevron-right"></mat-icon>
+  <!-- Overlay Pages -->
+  @if (currentPage !== 'main') {
+    <div class="overlay" [@slideOverlay]>
+      <div class="overlay-header" data-tauri-drag-region>
+        <button mat-icon-button (click)="navigateTo('main')">
+          <mat-icon svgIcon="chevron-left" class="icon icon-bw"></mat-icon>
+        </button>
+        <p><strong>{{ currentPage | titlecase }}</strong></p>
+        <button mat-icon-button (click)="close()">
+          <mat-icon svgIcon="circle-xmark" class="icon icon-bw"></mat-icon>
+        </button>
+      </div>
+      @if (currentPage === 'details') {
+        <div class="overlay-content">
+          <div class="stacked-buttons">
+            <button mat-button class="about-item"
+              (click)="openLink('https://github.com/Hakanbaban53/rclone-manager')"
+              style="border-radius: 16px 16px 0px 0px !important;">
+              <span>Website</span>
+              <mat-icon svgIcon="open-link"></mat-icon>
             </button>
-            <button mat-button class="about-item" (click)="navigateTo('About Rclone')">
-                <span>About Rclone</span>
-                <mat-icon svgIcon="chevron-right"></mat-icon>
+            <mat-divider></mat-divider>
+            <button mat-button class="about-item"
+              (click)="openLink('https://github.com/Hakanbaban53/rclone-manager/issues')"
+              style="border-radius: 0px 0px 16px 16px !important;">
+              <span>Report Issues</span> <mat-icon svgIcon="open-link"></mat-icon>
             </button>
-            <div class="stacked-buttons">
-                <button mat-button class="about-item" (click)="navigateTo('credits')"
-                    style="border-radius: 16px 16px 0px 0px !important;">
-                    <span>Credits</span> <mat-icon svgIcon="chevron-right"></mat-icon>
-                </button>
-                <mat-divider></mat-divider>
-                <button mat-button class="about-item" (click)="navigateTo('legal')"
-                    style="border-radius: 0px 0px 16px 16px !important;">
-                    <span>Legal</span> <mat-icon svgIcon="chevron-right"></mat-icon>
-                </button>
-            </div>
+          </div>
         </div>
+      }
+      @if (currentPage === 'About Rclone') {
+        <div class="overlay-content">
+          <div class="rclone-info">
+            <h3>Rclone Information</h3>
+            @if (loadingRclone) {
+              <div class="loading">
+                <mat-spinner diameter="24"></mat-spinner>
+                <span>Loading Rclone info...</span>
+              </div>
+            }
+            @if (rcloneError) {
+              <div class="error">
+                <mat-icon svgIcon="circle-xmark"></mat-icon>
+                <span>{{ rcloneError }}</span>
+              </div>
+            }
+            @if (rcloneInfo) {
+              <div class="rclone-details">
+                <div class="detail-row">
+                  <span class="detail-label">Version:</span>
+                  <span class="detail-value">{{ rcloneInfo.version }}</span>
+                </div>
+                <div class="detail-row">
+                  <span class="detail-label">OS:</span>
+                  <span class="detail-value">{{ rcloneInfo.os }} ({{ rcloneInfo.arch }})</span>
+                </div>
+                <div class="detail-row">
+                  <span class="detail-label">Rclone PID:</span>
+                  <span class="detail-value">{{ rcloneInfo.pid }}</span>
+                </div>
+                <div class="detail-row">
+                  <span class="detail-label">Go Version:</span>
+                  <span class="detail-value">{{ rcloneInfo.goVersion }}</span>
+                </div>
+                <div class="detail-row">
+                  <span class="detail-label">Build:</span>
+                  <span class="detail-value">{{ rcloneInfo.linking }}</span>
+                </div>
+                @if (rcloneInfo.isBeta) {
+                  <div class="detail-row warning">
+                    <mat-icon svgIcon="triangle-exclamation"></mat-icon>
+                    <span>This is a beta version</span>
+                  </div>
+                }
+                @if (rcloneInfo.isGit) {
+                  <div class="detail-row warning">
+                    <mat-icon svgIcon="triangle-exclamation"></mat-icon>
+                    <span>This is a git build</span>
+                  </div>
+                }
+              </div>
+            }
+            <div class="about-list">
+              <button mat-button class="about-item" (click)="openLink('https://rclone.org')">
+                <span>Rclone Website</span>
+                <mat-icon svgIcon="open-link"></mat-icon>
+              </button>
+              <button mat-button class="about-item" (click)="killProcess()">
+                <span>Kill Rclone Process</span>
+                <mat-icon svgIcon="circle-exclamation"></mat-icon>
+              </button>
+            </div>
+          </div>
+        </div>
+      }
+      @if (currentPage === 'credits') {
+        <div class="overlay-content credits">
+          <strong>Developed By</strong>
+          <button mat-button class="about-item">
+            <span>Hakan İSMAİL</span>
+          </button>
+        </div>
+      }
+      @if (currentPage === 'legal') {
+        <div class="overlay-content">
+          <p>
+            This application comes with absolutely no warranty. See the
+            <a (click)="openLink('https://www.gnu.org/licenses/gpl-3.0.html')">GNU
+            General Public License, version 3</a>
+            or later for details.
+          </p>
+        </div>
+      }
     </div>
-
-    <!-- Overlay Pages -->
-    <div class="overlay" *ngIf="currentPage !== 'main'" [@slideOverlay]>
-        <div class="overlay-header" data-tauri-drag-region>
-            <button mat-icon-button (click)="navigateTo('main')">
-                <mat-icon svgIcon="chevron-left" class="icon icon-bw"></mat-icon>
-            </button>
-            <p><strong>{{ currentPage | titlecase }}</strong></p>
-            <button mat-icon-button (click)="close()">
-                <mat-icon svgIcon="circle-xmark" class="icon icon-bw"></mat-icon>
-            </button>
-        </div>
-
-        <div class="overlay-content" *ngIf="currentPage === 'details'">
-            <div class="stacked-buttons">
-                <button mat-button class="about-item"
-                    (click)="openLink('https://github.com/Hakanbaban53/rclone-manager')"
-                    style="border-radius: 16px 16px 0px 0px !important;">
-                    <span>Website</span>
-                    <mat-icon svgIcon="open-link"></mat-icon>
-                </button>
-                <mat-divider></mat-divider>
-                <button mat-button class="about-item"
-                    (click)="openLink('https://github.com/Hakanbaban53/rclone-manager/issues')"
-                    style="border-radius: 0px 0px 16px 16px !important;">
-                    <span>Report Issues</span> <mat-icon svgIcon="open-link"></mat-icon>
-                </button>
-            </div>
-        </div>
-
-        <div class="overlay-content" *ngIf="currentPage === 'About Rclone'">
-            <div class="rclone-info">
-                <h3>Rclone Information</h3>
-
-                <div *ngIf="loadingRclone" class="loading">
-                    <mat-spinner diameter="24"></mat-spinner>
-                    <span>Loading Rclone info...</span>
-                </div>
-
-                <div *ngIf="rcloneError" class="error">
-                    <mat-icon svgIcon="circle-xmark"></mat-icon>
-                    <span>{{ rcloneError }}</span>
-                </div>
-
-                <div *ngIf="rcloneInfo" class="rclone-details">
-                    <div class="detail-row">
-                        <span class="detail-label">Version:</span>
-                        <span class="detail-value">{{ rcloneInfo.version }}</span>
-                    </div>
-                    <div class="detail-row">
-                        <span class="detail-label">OS:</span>
-                        <span class="detail-value">{{ rcloneInfo.os }} ({{ rcloneInfo.arch }})</span>
-                    </div>
-                    <div class="detail-row">
-                        <span class="detail-label">Rclone PID:</span>
-                        <span class="detail-value">{{ rcloneInfo.pid }}</span>
-                    </div>
-                    <div class="detail-row">
-                        <span class="detail-label">Go Version:</span>
-                        <span class="detail-value">{{ rcloneInfo.goVersion }}</span>
-                    </div>
-                    <div class="detail-row">
-                        <span class="detail-label">Build:</span>
-                        <span class="detail-value">{{ rcloneInfo.linking }}</span>
-                    </div>
-                    <div *ngIf="rcloneInfo.isBeta" class="detail-row warning">
-                        <mat-icon svgIcon="triangle-exclamation"></mat-icon>
-                        <span>This is a beta version</span>
-                    </div>
-                    <div *ngIf="rcloneInfo.isGit" class="detail-row warning">
-                        <mat-icon svgIcon="triangle-exclamation"></mat-icon>
-                        <span>This is a git build</span>
-                    </div>
-                </div>
-
-                <div class="about-list">
-                    <button mat-button class="about-item" (click)="openLink('https://rclone.org')">
-                        <span>Rclone Website</span>
-                        <mat-icon svgIcon="open-link"></mat-icon>
-                    </button>
-
-                    <button mat-button class="about-item" (click)="killProcess()">
-                        <span>Kill Rclone Process</span>
-                        <mat-icon svgIcon="circle-exclamation"></mat-icon>
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <div class="overlay-content credits" *ngIf="currentPage === 'credits'">
-            <strong>Developed By</strong>
-            <button mat-button class="about-item">
-                <span>Hakan İSMAİL</span>
-            </button>
-        </div>
-
-        <div class="overlay-content" *ngIf="currentPage === 'legal'">
-            <p>
-                This application comes with absolutely no warranty. See the
-                <a (click)="openLink('https://www.gnu.org/licenses/gpl-3.0.html')">GNU
-                    General Public License, version 3</a>
-                or later for details.
-            </p>
-        </div>
-    </div>
+  }
 </div>
