--- a/src/app/modals/export-modal/export-modal.component.html
+++ b/src/app/modals/export-modal/export-modal.component.html
@@ -1,64 +1,72 @@
 <div class="export-modal">
-    <!-- 🔹 Modal Header -->
-    <div class="modal-header" data-tauri-drag-region>
-        <button>
-            <mat-icon svgIcon="question"></mat-icon>
-        </button>
-        <p>Export Settings</p>
-        <button (click)="close()">
-            <mat-icon svgIcon="circle-xmark"></mat-icon>
-        </button>
-    </div>
-    <!-- 🔸 Modal Content -->
-    <div class="modal-content">
-        <mat-form-field appearance="fill" style="width: 100%;">
-            <mat-label>Export Option</mat-label>
-            <mat-select [(ngModel)]="selectedOption">
-                <mat-option *ngFor="let option of exportOptions" [value]="option.value">
-                    {{ option.label }}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
+  <!-- 🔹 Modal Header -->
+  <div class="modal-header" data-tauri-drag-region>
+    <button>
+      <mat-icon svgIcon="question"></mat-icon>
+    </button>
+    <p>Export Settings</p>
+    <button (click)="close()">
+      <mat-icon svgIcon="circle-xmark"></mat-icon>
+    </button>
+  </div>
+  <!-- 🔸 Modal Content -->
+  <div class="modal-content">
+    <mat-form-field appearance="fill" style="width: 100%;">
+      <mat-label>Export Option</mat-label>
+      <mat-select [(ngModel)]="selectedOption">
+        @for (option of exportOptions; track option) {
+          <mat-option [value]="option.value">
+            {{ option.label }}
+          </mat-option>
+        }
+      </mat-select>
+    </mat-form-field>
 
-        <mat-form-field *ngIf="selectedOption === 'specific-remote'" appearance="fill" style="width: 100%;" @slideInOut>
-            <mat-label>Select Remote</mat-label>
-            <mat-select [(ngModel)]="selectedRemoteName" required>
-                <mat-option *ngFor="let remote of remotes" [value]="remote">
-                    {{ remote }}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
+    @if (selectedOption === 'specific-remote') {
+      <mat-form-field appearance="fill" style="width: 100%;" @slideInOut>
+        <mat-label>Select Remote</mat-label>
+        <mat-select [(ngModel)]="selectedRemoteName" required>
+          @for (remote of remotes; track remote) {
+            <mat-option [value]="remote">
+              {{ remote }}
+            </mat-option>
+          }
+        </mat-select>
+      </mat-form-field>
+    }
 
-        <mat-form-field appearance="fill" style="width: 100%;">
-            <mat-label>Save Export To</mat-label>
-            <input matInput [value]="exportPath" placeholder="Select a folder..." readonly />
-            <button mat-icon-button matSuffix (click)="selectFolder()" matTooltip="Browse">
-                <mat-icon svgIcon="folder"></mat-icon>
-            </button>
-        </mat-form-field>
+    <mat-form-field appearance="fill" style="width: 100%;">
+      <mat-label>Save Export To</mat-label>
+      <input matInput [value]="exportPath" placeholder="Select a folder..." readonly />
+      <button mat-icon-button matSuffix (click)="selectFolder()" matTooltip="Browse">
+        <mat-icon svgIcon="folder"></mat-icon>
+      </button>
+    </mat-form-field>
 
-        <span matTooltip="7-Zip is not available on this system" [matTooltipDisabled]="sevenZipSupported">
-            <mat-checkbox [(ngModel)]="withPassword" [disabled]="!sevenZipSupported">
-                Encrypt Backup
-            </mat-checkbox>
-        </span>
+    <span matTooltip="7-Zip is not available on this system" [matTooltipDisabled]="sevenZipSupported">
+      <mat-checkbox [(ngModel)]="withPassword" [disabled]="!sevenZipSupported">
+        Encrypt Backup
+      </mat-checkbox>
+    </span>
 
-        <mat-form-field *ngIf="withPassword" appearance="fill" style="width: 100%;" @slideInOut>
-            <mat-label>Password</mat-label>
-            <input matInput [(ngModel)]="password" type="password" required />
-        </mat-form-field>
-    </div>
+    @if (withPassword) {
+      <mat-form-field appearance="fill" style="width: 100%;" @slideInOut>
+        <mat-label>Password</mat-label>
+        <input matInput [(ngModel)]="password" type="password" required />
+      </mat-form-field>
+    }
+  </div>
 
-    <!-- 🔘 Modal Actions -->
-    <div class="button-group">
-        <span matTooltip="Please select a folder to save the export"
-            [matTooltipDisabled]="!(!exportPath || (withPassword && !password))">
+  <!-- 🔘 Modal Actions -->
+  <div class="button-group">
+    <span matTooltip="Please select a folder to save the export"
+      [matTooltipDisabled]="!(!exportPath || (withPassword && !password))">
             <button mat-raised-button color="primary" (click)="onExport()" [disabled]="!exportPath ||
                 (withPassword && !password) ||
                 (selectedOption === 'specific-remote' && !selectedRemoteName)">
-                <mat-icon svgIcon="circle-check" class="icon-left"></mat-icon>
-                Export
-            </button>
-        </span>
-    </div>
+        <mat-icon svgIcon="circle-check" class="icon-left"></mat-icon>
+        Export
+      </button>
+    </span>
+  </div>
 </div>
